# pomodoro-leptos-csr

./: .gitignore  CLAUDE.md  Cargo.toml  index.html  styles.css
.github/workflows/: deploy.yml
src/: app.rs  history.rs  main.rs  settings_panel.rs  tasks.rs  timer.rs  util.rs
src/storage/: indexeddb.rs  mod.rs
