[package]
name = "pomodoro-leptos-csr"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
idb = "0.6"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
  "HtmlInputElement",
  "console",
]
